RbA Build/src/objects/Specialty_Grille_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Grille_Pattern__c</fullName>
        <label>Grille Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Colonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renaissance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunburst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Hub Sunburst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gothic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grille_Style__c</fullName>
        <label>Grille Style</label>
        <picklist>
            <picklistValues>
                <fullName>No Grilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grilles Between Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood and GBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simulated Divided Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Divided Light</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hubs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hubs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_High__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lites High</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_Wide__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lites Wide</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Specialty Grille Configurations</relationshipLabel>
        <relationshipName>Specialty_Grille_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty_Shape__c</fullName>
        <label>Specialty Shape</label>
        <picklist>
            <picklistValues>
                <fullName>Equal Leg Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peak Pentagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hexagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trapezoid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unequal Leg Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Springline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spokes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spokes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Specialty Grille Configuration</label>
    <nameField>
        <displayFormat>GC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Grille Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>